# internal/api/handlers/task.go
@@ -122,6 +122,16 @@ func (h *taskHandler) UpdateTask(c *gin.Context) {
 	c.JSON(200, gin.H{"message": "Task updated successfully", "task_id": task.ID})
 }
 
+// DeleteTask removes a task
+// @Summary Delete a task
+// @Description Delete a task by its id
+// @Tags tasks
+// @Produce json
+// @Param id path string true "task id"
+// @Success 204
+// @Failure 404 {object} map[string]string
+// @Failure 500 {object} map[string]string
+// @Router /tasks/{id} [delete]
 func (h *taskHandler) DeleteTask(c *gin.Context) {
 	id := c.Param("id")
 	taskToDelete, err := h.repo.FindById(c, id)
@@ -169,4 +179,44 @@ func (h *taskHandler) ListTasks(c *gin.Context) {
 	c.JSON(http.StatusOK, tasks)
 }
 
-//TODO: Other handlers like ListTasks
+// GetScheduledTasks lists tasks in a time span
+// @Summary List Scheduled Tasks
+// @Description List scheduled tasks in a determined timespan
+// @Tags taks
+// @Produce json
+// @Param from query string true "begin date (RFC3339)"
+// @Param to query string true "end date (RFC3339)"
+// @Success 200 {array} domain.Task
+// @Failure 400 {object} map[string]string
+// @Failure 500 {object} map[string]string
+// @Router /tasks/scheduled [get]
+func (h *taskHandler) GetScheduledTasks(c *gin.Context) {
+	// this is the time.RFC3339 format: "2006-01-02T15:04:05Z07:00"
+	from, err := time.Parse(time.RFC3339, c.Query("from"))
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid from date"})
+		return
+	}
+
+	to, err := time.Parse(time.RFC3339, c.Query("to"))
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid to date"})
+		return
+	}
+
+	if to.Before(from) {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "to date before from date"})
+		return
+	}
+
+	tasks, err := h.repo.FindScheduled(c.Request.Context(), from, to)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+	}
+
+	if tasks == nil {
+		tasks = []*domain.Task{}
+	}
+
+	c.JSON(http.StatusOK, tasks)
+}
